Add ListransactionFragment, add rcv in ChartFragment, get data from db when resume

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="thu">Thu</string>
     <string name="lich">Lịch</string>
     <string name="giao_dich">Giao dịch</string>
+    <string name="filter">Lọc</string>
 </resources>
